Fix alignment on share button
Change margin to ensure the share
button is in the same location for
both the author display and the
social share overlay.

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
 }
 
 .author {
-  margin: 30px 0;
+  margin: 38px 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
